Assisticant view models.

--- a/CleanViewModels/App.xaml
+++ b/CleanViewModels/App.xaml
@@ -1,8 +1,9 @@
 ﻿<Application x:Class="CleanViewModels.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             xmlns:vm="clr-namespace:CleanViewModels.ViewModels"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+        <vm:ViewModelLocator x:Key="Locator" />
     </Application.Resources>
 </Application>
