--- a/TypicalViewModels/MainWindow.xaml
+++ b/TypicalViewModels/MainWindow.xaml
@@ -17,7 +17,7 @@
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition/>
         </Grid.ColumnDefinitions>
-        <Grid>
+        <Grid DataContext="{Binding Source={StaticResource Locator}, Path=Main}">
             <Grid.RowDefinitions>
                 <RowDefinition/>
                 <RowDefinition Height="Auto"/>
@@ -29,9 +29,9 @@
                     <RowDefinition Height="Auto"/>
                 </Grid.RowDefinitions>
 
-                <TextBlock TextWrapping="Wrap" Text="Items:" Margin="10,10,10,0" Foreground="#FF8F8F8F"/>
+                <TextBlock TextWrapping="Wrap" Text="People:" Margin="10,10,10,0" Foreground="#FF8F8F8F"/>
 
-                <ListBox ItemsSource="{Binding Items}" ItemTemplate="{DynamicResource ItemHeaderTemplate}" Margin="10" Grid.Row="1" SelectedItem="{Binding SelectedItem}">
+                <ListBox ItemsSource="{Binding People}" ItemTemplate="{DynamicResource ItemHeaderTemplate}" Margin="10" Grid.Row="1" SelectedItem="{Binding SelectedPerson}">
                     <i:Interaction.Behaviors>
                         <Itzben:PersistentSelectionBehavior/>
                     </i:Interaction.Behaviors>
@@ -46,7 +46,7 @@
             </Grid>
 
         </Grid>
-        <StackPanel HorizontalAlignment="Stretch" VerticalAlignment="Top" Grid.Column="1">
+        <StackPanel DataContext="{Binding Source={StaticResource Locator}, Path=PersonDetail}" VerticalAlignment="Top" Grid.Column="1">
             <TextBlock TextWrapping="Wrap" Text="First Name:" Margin="10,10,10,0" Foreground="#FF8F8F8F"/>
             <TextBox Height="23" TextWrapping="Wrap" Text="{Binding FirstName}" Margin="10"/>
             <TextBlock TextWrapping="Wrap" Text="Last Name:" Margin="10,10,10,0" Foreground="#FF8F8F8F"/>
